@@ -14,7 +14,7 @@
         <title>Epiphany</title> 
         <screenshot> 
         <mediaobject> 
-          <imageobject><imagedata fileref="&urlfiguresbase;MultiLoad_applet.png"
+          <imageobject><imagedata fileref="&urlfiguresbase;epiphany.png"
 			format="PNG"/> 
           </imageobject>
  	  <textobject> 
