@@ -1,3 +1,9 @@
+2003-08-18 John Fleck <jfleck@inkstian.net>
+
+	add
+	* rncontrolcenter.xml
+	add control center, various edits
+
 2003-08-17 John Fleck <jfleck@inkstian.net>
 
 	added:
